Prevent _replModeStart line number from becoming negative

Hopefully, this solves:
BUG: 457920
BUG: 458015